--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ data/message_copy_dict.pickle
 ### Session ###
 *.session
 
+### Virtual Environment ###
+aceEnv/
+
 ### Python ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
